<resources>
    <string name="app_name">Dexon</string>
    <string name="dexon_website">http://dexon.us/</string>

    <!-- Hints -->
    <string name="txt_loginemail_hint">Usuario</string>
    <string name="txt_loginpassword_hint">Contraseña</string>
    <string name="txt_forgotemail_hint">Usuario o Email</string>
    <string name="txt_currentpassword_hint">Contraseña Actual</string>
    <string name="txt_newpassword_hint">Contraseña Nueva</string>
    <string name="txt_confirmpassword_hint">Confirme Contraseña</string>
    <string name="txt_palabra_clave_hint">Palabra Clave</string>

    <!-- Button Texts -->
    <string name="btn_login_text">INICIAR SESION</string>
    <string name="btn_forgotpass_text">RECORDAR CONTRASEÑA</string>
    <string name="btn_recoverpass_text">RECORDAR CONTRASEÑA</string>
    <string name="btn_changepass_text">ACEPTAR</string>
    <string name="btn_cancel_text">Cancelar</string>
    <string name="btn_ok_text">Aceptar</string>
    <string name="btn_setmanual_technician_text">Manual</string>
    <string name="btn_setautomatic_technician_text">Automatic</string>
    <string name="btn_settome_technician_text">To me</string>

    <!-- Label Texts -->
    <string name="txt_forgot_password_label">Digite su usuario o email, se le enviará un correo con su contraseña nueva.</string>
    <string name="txt_change_password_label">Para cambiar la contraseña, digite la información solicitada a continuación:</string>
    <string name="txt_change_passwordconfirm_label">La contraseña cambió satisfactoriamente.</string>
    <string name="txt_asignados_label">Asignados</string>
    <string name="chk_include_close">Cerrados</string>
    <string name="txt_progress_left">Progreso</string>
    <string name="txt_progress_right">de la Tarea</string>
    <string name="txt_progress_above">Progresión de la Tarea</string>
    <string name="txt_plantilla">Plantilla</string>

    <string name="txt_activity_technician">Técnico</string>
    <string name="txt_activity_status">Estado</string>
    <string name="txt_activity_startdate">Fecha de Inicio</string>
    <string name="txt_activity_enddate">Fecha de Fin</string>
    <string name="txt_activity_comments">Comentario</string>

    <string name="txt_relateddata_title">Datos Relacionados</string>
    <string name="txt_relateddata_detail_title">Detalle Maestro</string>
    <string name="txt_relateddata_delete_title">Delete</string>

    <string name="txt_attachment_title">Attachments</string>
    <string name="txt_attachment_pending_title">Pending Attachments</string>

    <!-- Menu Labels -->
    <string name="menu_change_password_label">Cambiar Contraseña</string>
    <string name="menu_exit_label">Cerrar Sesión</string>
    <string name="menu_cancel_label">Cancelar</string>
    <string name="menu_save_ticket">Save</string>
    <string name="menu_reopen_ticket">Reopen</string>
    <string name="menu_create_son">Crear Hijo</string>
    <string name="menu_create_brother">Crear Hermano</string>
    <string name="menu_print_ticket">Imprimir Ticket</string>
    <string name="menu_recalculate_sla">Recalcular SLA</string>
    <string name="menu_history">Historial</string>
    <string name="menu_attachment">Adjuntos</string>
    <string name="menu_done">Done</string>

    <!-- Activity Title -->
    <string name="activity_incident_title">Incidentes</string>
    <string name="activity_newincident_title">Nuevo Incidente</string>
    <string name="activity_plantilla_title">Plantilla</string>
    <string name="activity_workflow_title">Workflow</string>
    <string name="title_activity_activity_list">Actividades</string>
    <string name="activity_print_ticket">Print Ticket</string>
    <string name="activity_detail_relateddata_title">Detalle Maestro</string>
    <string name="activity_attachment_title">Adjuntos</string>
    <string name="activity_newattachment_title">Adjuntar Archivo</string>

</resources>
