<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/txt_loginemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_loginemail_hint" />

    <EditText
        android:id="@+id/txt_loginpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_loginpassword_hint" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/btn_login_text"
        android:onClick="btnLoginClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/btn_forgotpass_text"
        android:onClick="btnForgotpassClick"/>

</LinearLayout>
