<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recovery"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_change_password_label"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txt_currentpassword"
            style="@style/textfield_style_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/txt_currentpassword_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txt_newpassword"
            style="@style/textfield_style_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/txt_newpassword_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txt_confirmpassword"
            style="@style/textfield_style_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/txt_confirmpassword_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_changepass"
            style="@style/buttons_style_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="btnChangePasswordClick"
            android:text="@string/btn_changepass_text"
            android:textAllCaps="true" />


    </LinearLayout>


    <View
        android:id="@+id/line_separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_above="@+id/logo_bottom"
        android:background="@color/white" />

    <ImageView
        android:id="@+id/logo_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:src="@drawable/ic_logo_mini" />


</RelativeLayout>
