<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recovery"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_forgot_password_label"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/txt_forgotemail"
            style="@style/textfield_style_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/txt_forgotemail_hint" />

        <Button
            android:id="@+id/btn_recoverpass_text"
            style="@style/buttons_style_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:onClick="btnRecoverPasswordClick"
            android:text="@string/btn_recoverpass_text"
            android:textAllCaps="true" />

    </LinearLayout>

    <View
        android:id="@+id/line_separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_above="@+id/logo_bottom"
        android:background="@color/white" />

    <ImageView
        android:id="@+id/logo_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:src="@drawable/ic_logo_mini" />

</RelativeLayout>
