<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_fieldtitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/white_btn_style"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_fieldvalue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/white_btn_style"
            android:drawableRight="@drawable/ic_arrow"
            android:gravity="right"
            android:singleLine="true"
            android:textColor="@color/gray_darker"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btn_setmanual_technician"
            style="@style/buttons_style_technician_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_setmanual_technician_text" />

        <Button
            android:id="@+id/btn_setautomatic_technician"
            style="@style/buttons_style_technician_middle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_setautomatic_technician_text" />

        <Button
            android:id="@+id/btn_settome_technician"
            style="@style/buttons_style_technician_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_settome_technician_text" />

    </LinearLayout>
</LinearLayout>